--- a/css/case.css
+++ b/css/case.css
@@ -10,6 +10,10 @@ body {
 	background-color:#023b3b;
 	font-family: "Microsoft Yahei",Helvetica, sans-serif;
 	overflow: hidden;
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
 }
 
 a {
@@ -130,6 +134,7 @@ button:focus {
 	right:0px;
 	bottom:0px;
 }
+
 #detail{
 	position:absolute;
 	top:13%;
@@ -145,6 +150,11 @@ button:focus {
 	
 	text-align:center;
 }
+
+#detail.magictime puffIn{
+	display:none
+}
+
 #detail h1,p,span{
 	font-family:'汉仪菱心体简';
 	display:block;
@@ -233,4 +243,94 @@ button:focus {
     font-size: 18px;
 	padding: 10px 30px;
 	box-shadow: 0px 0px 12px rgba(0,255,255,0.5);
+}
+
+#getInfo{
+	position: absolute;
+	right: 5%;
+}
+
+#dayinfo {
+	position:absolute;
+	height:60px;
+	top: 2%;
+	left: 2%;
+	right: 2%;
+	bottom: 2%;
+	box-shadow:0px 0px 12px rgba(0,255,255,0.5);
+	border:1px solid rgba(127,255,255,0.25);
+	border-radius:3px;
+	color:rgba(127,255,255,0.75);
+	/* background-color:rgba(0,255,255,0.1); */
+	background-color:rgba(0,0,0,.5);
+	text-align:center;
+}
+
+#dayinfo .dayinfoBox{
+	width: 18%;
+	float: left;
+	height:60px;
+	line-height:60px;
+	padding-left: 1%;
+	padding-right: 1%;
+	font-family:'汉仪菱心体简';
+	display:block;
+	box-shadow:0px 0px 12px rgba(0,255,255,0.5);
+	border:1px solid rgba(127,255,255,0.7);
+	border-radius:3px;
+	color:white;
+	text-align:left;
+	font-weight: bolder;
+	font-size: 13px;
+}
+
+#dayinfo .dayinfoBox.big{
+	width: 38%;
+	padding-left: 1%;
+	padding-right: 1%;
+}
+
+#dayinfo .dayinfoBox .symbol{
+	display:initial;
+	padding-left: 10px;
+	font-size: 20px;
+	font-weight: bold;
+	color: rgba(255,255,255,0.75);
+	text-shadow: 0 0 10px rgba(0,255,255,0.95);
+}
+
+.popup{
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	right: 0px;
+	bottom: 0px;
+	opacity: 1;
+	-webkit-transition: all .5s ease-in;
+	-moz-transition: all .5s ease-in;
+	transition: all .5s ease-in;
+
+}
+
+.popup.disappear{
+	opacity: 0;
+}
+
+.popup .content{
+	color: rgba(255,255,255,0.75);
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	margin: auto;
+	max-width: 200px;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	font-weight: bolder;
+	font-size: 16px;
+	padding: 10px;
+	background: rgba(169, 169, 169, 0.5);
+	border-radius: 5px;
 }
